--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -9,6 +9,8 @@ layout: default
 		{%- endif -%}
 	</h1>
 
+	{%- include breadcrumbs %}
+
 	{%- if page.credits %}
 	<div id="pagecred">{{ page.credits }}</div>
 	{%- endif %}
