--- a/css/global.css
+++ b/css/global.css
@@ -773,6 +773,12 @@ body {
 		}
 	}
 
+	header {
+		display: flex;
+		flex-direction: column;
+		gap: 0.5em;
+	}
+
 	h1 {
 		text-align: center;
 		margin: 0;
@@ -782,9 +788,18 @@ body {
 		}
 	}
 }
-#pagecred, #pagedesc, #pagesrc, #pagetoc, #pageseealso {
-	margin-block: 0.5em;
-	&:last-child { margin-block-end: 0 }
+#crumbs {
+	/* Don't bother with getting them to not stack. There's only ever a max of 3 links - too few for it to be a real problem, IMO. */
+	order: -1;
+	margin-block: -0.25em -0.5em;
+	font-size: 0.9em;
+	text-align: center;
+	color: var(--gray);
+	
+	a:not(:hover, :focus-within) {
+		text-decoration: none;
+		color: var(--gray);
+	}
 }
 #pagesrc, #pagetoc, #pageseealso {
 	border: calc(var(--border-width) * 0.5) solid transparent;
